# legal-pdf-extractor

./: .gitignore  README.md  pyproject.toml
demos/: streamlit_app.py
demos/notebooks/: end_to_end_flow_demonstration.ipynb  test_notebook.ipynb
src/legal_pdf_extractor/: __init__.py  api.py  cli.py  config.py  errors.py  schemas.py
src/legal_pdf_extractor/documents/: cache.py  hashing.py  models.py  normalization.py
src/legal_pdf_extractor/extraction/: __init__.py  examples.py  extraction_prompt.txt  extractor.py  prompts.py
src/legal_pdf_extractor/indexing/: base.py  docling_hybrid_chunker.py  embeddings.py  index_manager.py  vector_store.py
src/legal_pdf_extractor/ingestion/: base.py  docling_parser.py  parsed_document.py
src/legal_pdf_extractor/llm/: base.py  openai_client.py
src/legal_pdf_extractor/output/: formatter.py
src/legal_pdf_extractor/retrieval/: base.py  ranking.py  retriever.py
src/legal_pdf_extractor/validation/: confidence.py  output_types.py  source_verifier.py  type_validator.py
tests/: test_api.py  test_cli.py  test_confidence.py  test_docling_hybrid_chunker.py  test_document_hashing.py  test_openai_embeddings.py  test_openai_llm_client.py  test_prompts.py  test_retrieval.py  test_source_verification.py  test_type_validation.py  test_vector_store.py
